# LuminationFor3DSurface

./: .gitignore  1crn_smoothed.vtp  1crn_with_New.vtp  CMakeLists.txt  ExaggeratedShadingInteractive.cpp  imgui.ini  loadShader.h  smoothing.h  yjReader.h
shaders/: cosine.fs  cosine.vs  gBuffer.fs  gBuffer.vs  pure.fs  softToon.fs  xShade.fs  xShade.vs
